# software_device_support

./: .gitignore  README.md  compiler_rt.sh  device_support.meson  geturls.sh  lld_win_elf.meson  lld_win_elf.sh  meson.build  package.sh  packs
docker/: README.md
docker/alpine_cicd_verify/: Dockerfile  build.sh
docker/ubuntu_cicd_python_deploy/: Dockerfile  build.sh
windows/: .gitignore  activate.bat  alpine.sh  fetch.py  generate.sh  ucrt64.db
